css/src/util/extends.scss
%card-top-border {
	border-top: 0.5rem solid $card-border-color;
}

%button {
	font: 900 .75rem/1rem $opensans;
	display: inline-block;
	padding: 0.4rem .8rem;
	color: $white;
	border: 1px solid lighten($dark-blue, 50%);
	margin: {
		bottom: $paragraph-margin-bottom;
		right: $paragraph-margin-bottom;
	}
	background-color: $button-background;
	text: {
		transform: uppercase;
	}
	transition: 0.25s color, 0.25s background-color;

	&:last-of-type {
		margin-right: 0;
	}

	&:hover,
	&:focus,
	&.hollow {
		color: $dark-blue;
		border-color: $dark-blue;
		background-color: $white;
		text-decoration: none;
	}

	&.hollow:hover {
		color: $dark-blue;
	}

	&.gradient {
		border: {
			width: 1px;
			style: solid;
			image: linear-gradient( 90deg, $light-blue, $light-green );
			image-slice: 1;
		}

		&:hover,
		&:focus {
			&,
			& * {
				color: $dark-blue;
			}
		}
	}

	&.big {
		font: {
			size: 1.5rem;
			weight: 600;
			family: $tungsten;
		}
		padding: .5rem .75rem;
		line-height: 1.5rem;
	}

	a {
		color: $white;
	}
}

%heading-sideline {
	text-align: center;
	margin-bottom: $grid-margin-gutters * 1.75;

	.cell.shrink {
		max-width: 75%;
		position: relative;
		margin-bottom: 0;
		line-height: 1.35em;
		hyphens: auto;
		letter-spacing: .18rem;
		text-transform: uppercase;
	}

	.grid-x {
		align-items: center;
		flex-wrap: nowrap;

		+ * {
			margin-top: $grid-margin-gutters / 2;
		}
	}

	.title-line {
		border-top: 2px solid $light-blue;

		&.two-line {
			line-height: 1;
		}
	}
}

// Taken from https://github.com/AgriLife/agriflex4/blob/master/css/src/_archive.scss
%af4-entry-compact {
	~ * {
		margin-top: $global-layout-space;
	}

	h2 {
		display: block;
		margin: 0 0 .7rem;
		font-size: 2.5rem;

		.has-cloud-fonts & {
			font-size: 2.75rem;
		}

		a {
			color: $darker-gray;
			text-decoration: none;

			&:focus,
			&:hover {
				text-decoration: underline;
			}
		}
	}

	p {
		font-size: .875rem;
		line-height: 1.3rem;
		margin-bottom: 0;
	}

	time {
		font: {
			style: italic;
			size: 1rem;
		}
		line-height: 1.25rem;
	}

	.grid-x {
		@include breakpoint(medium) {
			flex-wrap: nowrap;
			justify-content: end;
		}
	}

	.button {
		margin-bottom: 0;
		margin-top: $grid-margin-gutters;
	}

	&.has-post-thumbnail {
		position: relative;

		.entry-image-link {
			img {
				margin-bottom: 0;
			}
		}
	}

	@include breakpoint(small only) {
		.card {
			padding: 0;
		}

		.cell.image img {
			width: 100%;
		}

		.cell.text {
			padding: $card-padding / 2;
		}
	}
}
// END Taken from https://github.com/AgriLife/agriflex4/blob/master/css/src/_archive.scss

